# alaya

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
alaya-paper/sections/: 03-architecture.tex  05-implementation.tex
bench/: .gitignore  README.md  pyproject.toml  run.py
bench/adapters/: __init__.py  alaya.py  base.py  fullcontext.py  mem0_adapter.py  naive_rag.py  zep_adapter.py
bench/datasets/: download.py
bench/judge/: llm_judge.py
bench/runners/: locomo.py  longmemeval.py
bench/tests/: test_adapters.py  test_e2e.py  test_judge.py
docs/: design.md  memory-landscape.html  openclaw-architecture-research.md  related-work.md  theoretical-foundations.md
docs/assets/: gen_benchmark_chart.py
docs/plans/: 2026-02-25-alaya-core.md  2026-02-26-p0-hardening.md  2026-02-27-demo-walkthrough.md  2026-02-27-test-coverage.md  2026-03-01-benchmark-harness-design.md  2026-03-01-benchmark-harness-plan.md  2026-03-02-emergent-ontology-design.md
examples/: demo.rs
paper/: main.tex  references.bib
paper-alaya/: main.tex
paper/sections/: 01-introduction.tex  04-taxonomy.tex  06-comparison.tex  09-open-problems.tex  10-limitations.tex  11-conclusion.tex  system-matrix.tex
src/: error.rs  lib.rs  provider.rs  schema.rs  types.rs
src/graph/: activation.rs  links.rs  mod.rs
src/lifecycle/: consolidation.rs  forgetting.rs  mod.rs  perfuming.rs  transformation.rs
src/retrieval/: bm25.rs  fusion.rs  mod.rs  pipeline.rs  rerank.rs  vector.rs
survey-paper/: main.tex  references.bib
tests/: integration.rs  mcp_tools.rs
(+18 files in other folders)
