[package]
name = "alaya"
version = "0.1.0"
edition = "2021"
description = "A neuroscience and Buddhist-inspired memory engine for conversational AI agents"
license = "MIT"
repository = "https://github.com/h4x0r/alaya"
keywords = ["memory", "ai", "rag", "conversational", "embedding"]
categories = ["database", "science"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
